Move notifications to a service - #107